--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Diego Vizcarra</title>
 </head>
-<link rel="stylesheet" href="website.css">
+<link rel="stylesheet" href="index.css">
 <h1>Diego Vizcarra</h1>
 <button onClick = "AlertButton()">ssdfs</button>
 <body>
