--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="stylesheet" href="index.css">
 <h1>Diego Vizcarra</h1>
 <button onClick = "AlertButton()">ssdfs</button>
-<a href="google.com">My LinkedIn Profile</a>
+<a href="www.linkedin.com/in/diego-vizcarra-668b15277">My LinkedIn Profile</a>
 <body>
 
 </body>
